--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <center><h1><%=name%></h1></center>
 <% images.forEach(function(image){%>
-    <center><img width="350" height="350" src="<%= image%>"></center>
+    <center><img  src="<%= image%>"></center>
 
     <%})%>
     <% if(number>1){%>
