--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,8 @@
 
     <center><h3>Search for a Manga!</h3>
         <form action="/search" method="GET">
-            <input class="form-control" type="text" name="Search" placeholder="Search" aria-label="Search">
-            <button>Search</button>
+            <input class="form-control" type="text" name="search" placeholder="search" aria-label="search">
+            <button type="submit">search</button>
         </form>
     </center>
     <br>
