--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
-<center><h1><%=name%></h1></center>
+<%- include ('./partials/header') %> 
+
+<center><h1><b><%=name%></b></h1></center>
+<br>
 <% images.forEach(function(image){%>
     <center><img  src="<%= image%>"></center>
 
@@ -9,3 +12,5 @@
     <a href="/mangas/<%=name%>/<%=prevchap%>">Previous</a>
     <a href="/mangas">Home</a>
     <a href="/mangas/<%=name%>/<%=nextchap%>">Next</a>
+
+    <%- include('./partials/footer') %> 
