--- a/views/chapters.ejs
+++ b/views/chapters.ejs
@@ -1,6 +1,6 @@
 <%- include ('./partials/header') %> 
 
-<center><h1><b>List of Available Mangas!</h1></b></center>
+<center><h1><b>List of Available Chapters!</h1></b></center>
 <br>
 <center>
     <% allChaps.forEach((chap,i)=>{%>
