--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
-                    <img src="<%= manga.imgurl %>" class="card-img" alt="#" width="200" height="200">
+                    <img src="<%= manga.imgUrl %>" class="card-img" alt="#" width="200" height="200">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
