--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <br>
 <ol>
     <center>    <% list.forEach(function(manga){%>
-            <form action="/mangas/<%=manga.name%>/" method="GET">         
+            <form action="/mangas/read/<%=manga.name%>/" method="GET">         
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                   <div class="col-md-4">
@@ -12,7 +12,7 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title"> <h3><a href="/mangas/<%=manga.name%>/"><%= manga.title %></h3></a></h5>
+                      <h5 class="card-title"> <h3><a href="/mangas/read/<%=manga.name%>/"><%= manga.title %></h3></a></h5>
                       <!-- <p class="card-text">Add info here!</p> -->
                       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
