--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,10 +14,16 @@
               <a class="navbar-brand" href="/mangas">Mangas!</a>
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/favourites">Favourites</a>
+                    <a class="nav-link" href="/mangas/trending">Trending</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link" href="/mangas/views">Most Viewed</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/mangas/rating">High Rated</a>
+                </li>  
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Forbidden!</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0" action="/search" method="GET">
