--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Forbidden!</a>
                 </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0" action="/search" method="GET">
+              <form class="form-inline my-2 my-lg-0" action="/mangas/search" method="GET">
                 <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
