--- a/webapp/src/styles/mangaChapterList.scss
+++ b/webapp/src/styles/mangaChapterList.scss
@@ -33,7 +33,7 @@ $black: #000000;
   justify-content: center;
   align-items: end;
   h4 {
-    margin: 0 5rem 0 12.5rem;
+    margin: 0 0 0 5rem;
   }
   button {
     width: 120px;
@@ -44,6 +44,9 @@ $black: #000000;
     border-radius: 35px;
     justify-content: flex-start;
   }
+}
+.title {
+  width: 70%;
 }
 .cardBody {
   display: flex;
@@ -65,7 +68,7 @@ $black: #000000;
   justify-content: flex-start;
   align-items: flex-start;
   h6 {
-    margin: 0 0 0 5rem;
+    margin: 0;
   }
 }
 .infoContainer {
@@ -89,6 +92,7 @@ $black: #000000;
   display: flex;
   flex-flow: row;
   align-items: center;
+  padding: 0;
   span {
     margin: 0 5px 0 0;
     text-transform: capitalize;
