resize landing page

--- a/webapp/src/styles/mangaChapterList.scss
+++ b/webapp/src/styles/mangaChapterList.scss
@@ -191,6 +191,9 @@ $black: #000000;
     height: 15px;
     margin: 0.7rem 0.7rem 0 2rem;
   }
+  a:hover {
+    text-decoration: none;
+  }
 }
 .chapterRight {
   width: 30%;
