--- a/webapp/src/styles/home.scss
+++ b/webapp/src/styles/home.scss
@@ -1,4 +1,5 @@
 $orange: #fc7b1e;
+$dark-orange: #ff573f;
 $white: #ffffff;
 $off-white: #dbdad9;
 $dark-blue: #262d38;
@@ -6,47 +7,55 @@ $m-plus: 'M PLUS Rounded 1c', sans-serif;
 $lato: 'Lato', sans-serif;
 
 .root {
-  background-image: url('../static/erwin_hero.png');
   background-size: cover;
-  -moz-background-size: cover;
-  min-height: 1024px;
-  min-width: 1440px;
   background-color: $dark-blue;
+}
+.backdrop {
+  position: absolute;
+  transform: translateX(13rem);
+  z-index: 0;
+  // height: 510px;
   mix-blend-mode: lighten;
+  img {
+    height: 100%;
+    width: 100%;
+  }
 }
 .nav {
   display: flex;
   flex-flow: row;
   justify-content: flex-end;
-  padding: 2rem 2rem 0 0;
-  font-size: 24px;
-  font-weight: normal;
+  padding: 1.1rem 1rem 0 0;
+  font-size: 20px;
+  font-weight: 400;
   mix-blend-mode: color-dodge;
   a {
-    color: $white;
+    color: $off-white;
+    margin: 0 1rem;
+  }
+  a:hover {
+    text-decoration: none;
   }
 }
 .highRated {
-  flex: 0 0 12rem;
   align-self: center;
   font-family: $m-plus;
 }
 .mostViewed {
-  flex: 0 0 12rem;
   align-self: center;
   font-family: $m-plus;
 }
 .trending {
-  flex: 0 0 11rem;
   align-self: center;
   font-family: $m-plus;
 }
 .button {
   button {
     border-radius: 25px;
-    width: 120px;
-    height: 50px;
-    font-size: 24px;
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 500;
     color: $white;
     background-color: $orange;
     font-family: $m-plus;
@@ -56,38 +65,41 @@ $lato: 'Lato', sans-serif;
 .title {
   display: flex;
   h1 {
-    justify-content: flex-start;
     margin: 0 0 0 66px;
-    min-width: 258px;
-    min-height: 77px;
     color: $off-white;
     font-family: $m-plus;
-    font-size: 64px;
+    font-size: 48px;
     font-weight: bolder;
     align-self: start;
+  }
+  a:hover {
+    text-decoration: none;
   }
 }
 .bodyCaption {
   color: $white;
-  padding: 18rem 0 0 0;
+  padding: 14% 5% 0 0;
   h1 {
     font-family: $lato;
-    font-size: 96px;
+    font-size: 60px;
     font-weight: bolder;
   }
   h3 {
     font-family: $lato;
-    font-size: 48px;
+    font-size: 24px;
     font-weight: initial;
+    // color: $off-white;
   }
 }
 .footerCaption {
   display: flex;
   flex-flow: column;
   color: $white;
-  padding: 19.5rem 0 0 0;
+  padding: 13% 5% 0 0;
   h5 {
     font-family: $lato;
+    font-size: 20px;
+    color: $off-white;
   }
 }
 .buttonContainer {
@@ -97,21 +109,20 @@ $lato: 'Lato', sans-serif;
   h4 {
     font-family: $lato;
     padding: 0 1rem 0 0;
+    font-size: 24px;
   }
   button {
-    border-radius: 45px;
-    min-width: 45px;
-    min-height: 45px;
-    background-color: $orange;
-    mix-blend-mode: color-dodge;
+    border-radius: 25px;
+    min-width: 0px;
+    width: 25px;
+    height: 25px;
+    background-color: $dark-orange;
     padding: 0;
     span {
       width: 100%;
       height: 100%;
       img {
-        transform: rotate(90deg);
-        width: 60%;
-        height: 25%;
+        transform: rotate(-90deg);
       }
     }
   }
