implement search bar toggle

--- a/webapp/src/styles/partial.scss
+++ b/webapp/src/styles/partial.scss
@@ -1,4 +1,5 @@
 $light-grey: #ede6e6;
+$grey: grey;
 
 .header {
   display: flex;
@@ -48,11 +49,24 @@ $light-grey: #ede6e6;
     min-width: 0;
     border-color: $light-grey;
   }
+  input {
+    height: 35px;
+    border-radius: 35px;
+    padding-left: 0.75rem;
+    border-color: $grey;
+  }
   hr {
     width: 1.2px;
     height: 70%;
     align-self: center;
     margin: 0 0.2rem;
+  }
+}
+.rightHeaderSearch {
+  input:focus {
+    .rightHeader {
+      display: none;
+    }
   }
 }
 .footer {
