--- a/webapp/src/styles/authPage.scss
+++ b/webapp/src/styles/authPage.scss
@@ -18,12 +18,16 @@
     }
   }
 }
-.buttonContainer {
+.btnContainer {
+  align-self: center;
+  display: flex;
+  flex-flow: row;
   margin: 5% auto;
   width: 100%;
   button {
     width: 140px;
     height: 35px;
+    border-radius: 25px;
     margin: auto 2%;
     text-transform: capitalize;
     color: white;
