--- a/webapp/src/styles/home.scss
+++ b/webapp/src/styles/home.scss
@@ -33,6 +33,7 @@ $lato: 'Lato', sans-serif;
   mix-blend-mode: color-dodge;
   a {
     color: $off-white;
+    text-decoration: none;
     margin: 0 1rem;
   }
   a:hover {
