--- a/webapp/src/styles/mangaChapter.scss
+++ b/webapp/src/styles/mangaChapter.scss
@@ -14,6 +14,7 @@ $grey: #c4c4c4;
   flex-flow: row;
   a {
     color: $white;
+    text-decoration: none;
   }
   h6 {
     padding: 0.5rem 0.5rem;
