--- a/webapp/src/styles/partial.scss
+++ b/webapp/src/styles/partial.scss
@@ -13,6 +13,7 @@ $grey: grey;
   align-items: center;
   a {
     color: black;
+    text-decoration: none;
   }
   a:hover {
     text-decoration: none;
@@ -101,6 +102,7 @@ $grey: grey;
     text-transform: capitalize;
     a {
       color: black;
+      text-decoration: none;
     }
     a:hover {
       text-decoration: none;
