--- a/webapp/src/styles/home.scss
+++ b/webapp/src/styles/home.scss
@@ -75,6 +75,9 @@ $lato: 'Lato', sans-serif;
     font-weight: bolder;
     align-self: start;
   }
+  a {
+    text-decoration: none;
+  }
   a:hover {
     text-decoration: none;
   }
