--- a/webapp/src/styles/mangaChapterList.scss
+++ b/webapp/src/styles/mangaChapterList.scss
@@ -187,6 +187,9 @@
     height: 15px;
     margin: 0.7rem 0.7rem 0 2rem;
   }
+  a {
+    text-decoration: none;
+  }
   a:hover {
     text-decoration: none;
   }
